# zotero-rag

./: .env.tmpl  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STYLE.md  TODOS.md  codecov.yml  deny.toml
.agents/skills/new-provider/: SKILL.md
.agents/skills/pdf-diagnostics/: SKILL.md
.agents/skills/verify/: SKILL.md
.cargo/: config.toml
.gemini/: config.yaml
.github/workflows/: build-dummy.yml  build-zqa-dummy.yml  build-zqa.yml  build.yml  cargo-assist.yml  cd.yml  check-dependencies-dummy.yml  check-dependencies.yml  claude-review.yml  claude.yml  coverage-dummy.yml  coverage.yml  lintcommit.yml  pr-size-gate.yml  rust-checks-dummy.yml  rust-checks.yml  rust.yml
assets/Zotero/: zotero.sqlite
docs/admin/: SPRINTS.md
docs/design/: 01_tool_attribute_macro.md  02_import_pdfs.md  03_ignore_rotated_text.md  04_persistent_hierarchical_retrieval.md  TEMPLATE.md
pdftools/: Cargo.toml
pdftools/benches/: pdftools_benchmark.rs
pdftools/src/: STRINGS.md  lib.rs  parse.rs
pdftools/src/math/: cmex.rs  cmmi.rs  cmsy.rs  mod.rs  msbm.rs
rag/: Cargo.toml
rag/src/: capabilities.rs  common.rs  config.rs  constants.rs  lib.rs  task.rs
rag/src/embedding/: cohere.rs  common.rs  mod.rs  openai.rs  voyage.rs
rag/src/llm/: anthropic.rs  base.rs  embeddings.rs  errors.rs  factory.rs  gemini.rs  http_client.rs  mod.rs  openai.rs  openrouter.rs  tools.rs  voyage.rs
rag/src/vector/: BACKUP_README.md  arrow.rs  backup.rs  checkhealth.rs  doctor.rs  lance.rs  library.rs  mod.rs
wiki/: cli.md  configuration.md  development.md  index.md  log.md  macros.md  pdf-processing.md  rag.md  system-overview.md
zqa/: Cargo.toml  README.md  failed.json
zqa-macros/: Cargo.toml  README.md
zqa-macros-proc/: Cargo.toml  README.md
zqa-macros-proc/src/: lib.rs
zqa-macros/src/: lib.rs  testing.rs
zqa-pdftools/: .gitignore  Cargo.toml  README.md
zqa-pdftools/assets/bench/: README.md
zqa-pdftools/benches/: zqa_pdftools_benchmark.rs
zqa-pdftools/src/: STRINGS.md  chunk.rs  edits.rs  fonts.rs  lib.rs  parse.rs  tokenizer.rs
zqa-pdftools/src/math/: README.md  cmex.rs  cmmi.rs  cmsy.rs  msbm.rs
zqa-rag/: Cargo.toml  README.md
zqa-rag/src/: capabilities.rs  common.rs  config.rs  constants.rs  http_client.rs  lib.rs  pricing.rs  progress.rs  requests.rs
zqa-rag/src/clients/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  test.rs
zqa-rag/src/embedding/: batch_adapter.rs  cohere.rs  common.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  voyage.rs  zeroentropy.rs
zqa-rag/src/llm/: anthropic.rs  base.rs  errors.rs  factory.rs  gemini.rs  http_client.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  test.rs  tools.rs
zqa-rag/src/providers/: anthropic.rs  cohere.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider_id.rs  registry.rs  test.rs  voyage.rs  zeroentropy.rs
zqa-rag/src/reranking/: cohere.rs  common.rs  mod.rs  voyage.rs  zeroentropy.rs
zqa-rag/src/vector/: backup.rs  checkhealth.rs  doctor.rs  lance.rs  mod.rs
zqa-rag/src/vector/backends/: backend.rs  lance.rs  mod.rs
zqa/assets/: zotero.sqlite  zotero.sqlite-journal
zqa/assets/Zotero/: zotero.sqlite  zotero.sqlite-journal
zqa/assets/Zotero/locate/: engines.json
zqa/assets/Zotero/storage/48W842TR/: .zotero-ft-cache  3661167.html
zqa/assets/Zotero/storage/5KWS383N/: .zotero-ft-cache
zqa/assets/Zotero/storage/7R5XZ5PX/: .zotero-ft-cache
zqa/assets/Zotero/storage/BB6WTJSC/: .zotero-ft-cache
zqa/assets/Zotero/storage/CHGD46GY/: .zotero-ft-cache
zqa/assets/Zotero/storage/NMMHW8DU/: .zotero-ft-cache
zqa/assets/Zotero/storage/PR495V8M/: .zotero-ft-cache
zqa/assets/Zotero/storage/VXUGITBJ/: .zotero-ft-cache
zqa/assets/Zotero/styles/: modern-language-association.csl
zqa/assets/Zotero/translators/: DOI Content Negotiation.js
zqa/assets/storage/8X6T78H3/: .zotero-ft-cache
zqa/assets/storage/ADNJBV9Y/: .zotero-ft-cache
zqa/assets/storage/EV5UDUI5/: .zotero-ft-cache  2502.html
zqa/assets/storage/K7I4WKTG/: .zotero-ft-cache  S0957417423001744.html
zqa/assets/translators/: Flickr.js  Open WorldCat.js  beck-online.js  eLife.js
zqa/src/: chain.rs  common.rs  config.rs  lib.rs  library.rs  main.rs  state.rs  state_tests.rs
zqa/src/cli/: app.rs  commands.rs  errors.rs  mod.rs  placeholder.rs  prompts.rs  readline.rs
zqa/src/cli/handlers/: batch.rs  cli.rs  conversation.rs  documents.rs  library.rs  mod.rs  query.rs
zqa/src/llm/: base.rs
zqa/src/store/: common.rs  lance.rs  mod.rs
zqa/src/tasks/: input.rs
zqa/src/tools/: documents.rs  mixins.rs  mod.rs  retrieval.rs  summarization.rs
zqa/src/tui/: app.rs  editor.rs  input.rs  io.rs  mod.rs  suggest.rs  terminal.rs  transcript.rs  ui.rs  writer.rs
zqa/src/ui/: app.rs  commands.rs
zqa/src/utils/: arrow.rs  documents.rs  izip.rs  library.rs  mod.rs  rag.rs  terminal.rs
zqa/tests/: extraction_prompt.rs  integration_tests.rs  new_library.rs
