[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "6.0.0"
dotenv = "0.15.0"
downcast = "0.11.0"
dyn-clone = "1.0.17"
lancedb = "0.11.0"
reqwest = "0.12.14"
rusqlite = "0.34.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.41.0"
chrono = "= 0.4.39"
libsqlite3-sys = "^0.32"
arrow-array = "52.2.0"

