[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lancedb = "0.15.0"
reqwest = "0.12.14"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.41.0"
arrow-schema = "53.4.1"
arrow-array = "53.4.1"
futures = "0.3.31"
http = "1.3.1"
bytes = "1.6.0"
indicatif = "0.18.0"

