[package]
name = "rag"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
lancedb = "0.21.3"
reqwest = { version = "0.12.14", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.41.0"
arrow-schema = "^55.1.0"
arrow-array = "^55.1.0"
futures = "0.3.31"
http = "1.3.1"
bytes = "1.6.0"
indicatif = "0.18.0"
log = "0.4.27"
rand = "0.9.2"
thiserror = "1.0"
tantivy = "0.24.2"

[dev-dependencies]
serial_test = "3.2.0"
