[package]
name = "zqa-macros-proc"
authors = ["Rahul Yedida <hello@ryedida.me>"]
homepage = "https://github.com/zotero-rag/zotero-rag"
description = "Proc-macros for the `zqa` application"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
