[package]
name = "zqa-pdftools"
authors = ["Rahul Yedida <hello@ryedida.me>"]
homepage = "https://github.com/zotero-rag/zotero-rag"
description = "A work-in-progress PDF parser tailored to CS-academic papers."
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
categories = ["parser-implementations"]
exclude = [
    "assets"
]

[dependencies]
itertools = "0.14.0"
log = "0.4.27"
lopdf = "0.34.0"
ordered-float = "5.1.0"
thiserror = "1.0"
zqa-macros.workspace = true

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "zqa_pdftools_benchmark"
harness = false
