[package]
name = "zqa-rag"
authors = ["Rahul Yedida <hello@ryedida.me>"]
description = "A retrieval-augmented generation (RAG) crate, used by `zqa`"
homepage = "https://github.com/zotero-rag/zotero-rag"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
arrow-array = { version = "^57.2.0", default-features = false }
arrow-schema = { version = "^57.2.0", default-features = false}
bytes = "1.6.0"
dotenv = "^0.15.0"
futures = "^0.3.31"
http = "1.3.1"
indicatif = "^0.18.4"
lancedb = { version = "^0.27.0", default-features = false  }
log = "0.4.27"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream", "form", "blocking"] }
schemars = "1.0.4"
serde = "^1.0.228"
serde_json = "^1.0.149"
serde-jsonlines = "0.7.0"
tempfile = "3.0"
thiserror = "1.0"
tokio = "1.41.0"
zqa-pdftools = { workspace = true }

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.0"
zqa-macros.workspace = true
