[package]
name = "zqa"
authors = ["Rahul Yedida <hello@ryedida.me>"]
homepage = "https://github.com/zotero-rag/zotero-rag"
description = "A QA and search program for your Zotero library."
version = "0.1.0-beta.1"
edition = "2024"
rust-version = "1.91"

[dependencies]
directories = "6.0.0"
arrow-array = "^55.1.0"
arrow-schema = "^55.1.0"
arrow-ipc = "^55.1.0"
libsqlite3-sys = "^0.32"
rusqlite = "0.34.0"
dotenv = "0.15.0"
rag = { path = "../rag/"}
pdftools = { path = "../pdftools/"}
reqwest = "0.12.14"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
log = "0.4.27"
indicatif = "0.17.11"
lancedb = "0.21.3"
crossterm = "0.29.0"
clap = { version = "4.5.40", features = ["derive"] }
rustyline = "16.0.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
fern = "0.7.1"
humantime = "2.2.0"
thiserror = "1.0"
toml = "0.9.8"

[[bin]]
name = "zqa"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
