[package]
name = "zqa"
authors = ["Rahul Yedida <hello@ryedida.me>"]
homepage = "https://github.com/zotero-rag/zotero-rag"
description = "A QA and search program for your Zotero library."
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.91"
license = "MIT"
categories = ["command-line-utilities", "science"]
readme = "README.md"
exclude = [
    "assets",
    "tests"
]

[dependencies]
directories = "6.0.0"
arrow-array = { version = "^56.2.0", default-features = false }
arrow-schema = { version = "^56.2.0", default-features = false}
arrow-ipc = { version = "^56.2.0", default-features = false }
rusqlite = "0.34.0"
dotenv = "0.15.0"
zqa-rag = { workspace = true }
zqa-pdftools = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
log = "0.4.27"
indicatif = "0.17.11"
lancedb = { version = "0.23.0", default-features = false  }
clap = { version = "4.5.40", default-features = false, features = ["derive", "help", "usage", "suggestions", "error-context", "std"] }
rustyline = "16.0.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
fern = "0.7.1"
humantime = "2.2.0"
thiserror = "1.0"
toml = "0.9.8"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"

[[bin]]
name = "zqa"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
