[package]
name = "zqa"
authors = ["Rahul Yedida <hello@ryedida.me>"]
homepage = "https://github.com/zotero-rag/zotero-rag"
description = "A QA and search program for your Zotero library."
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.91"
license = "MIT"
categories = ["command-line-utilities", "science"]
readme = "README.md"
exclude = [
    "assets",
    "tests"
]

[dependencies]
arrow-array = { version = "^57.2.0", default-features = false }
arrow-ipc = { version = "^57.2.0", default-features = false }
arrow-schema = { version = "^57.2.0", default-features = false}
chrono = "^0.4.44"
clap = { version = "^4.6.0", default-features = false, features = ["derive", "help", "usage", "suggestions", "error-context", "std"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
dotenv = "0.15.0"
fern = "0.7.1"
futures = "0.3"
humantime = "2.2.0"
indicatif = "0.17.11"
lancedb = { version = "^0.27.0", default-features = false  }
log = "0.4.27"
nucleo-matcher = "0.3.1"
rpassword = "7.4.0"
rusqlite = "0.34.0"
rustyline = "16.0.0"
schemars = "1.2.1"
serde = "^1.0.228"
serde_json = "^1.0.149"
temp-env = { version = "0.3.6", features = ["async_closure"] }
thiserror = "1.0"
tokio = "^1.50.0"
toml = "0.9.8"
zqa-pdftools = { workspace = true }
zqa-rag = { workspace = true }

[[bin]]
name = "zqa"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.24.0"
zqa-macros.workspace = true
futures = "0.3"
zqa-macros-proc.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
